# Hexapod-Navigation-DG

./: .gitignore  README.md  setup.cfg
Mujoco/: MUJOCO_LOG.TXT  Teensy_Majuco_HIL.py  Test_Teensy_input.py  Test_actuators.py  VScode.cmd  hexapod_CAD_based.xml  hexapod_Lotriet.xml  test_Windows_serial.py
Mujoco/assets/: foot_tip_no_foot.stl  foot_tip_no_foot_foot.stl  foot_tip_no_foot_motor.stl  hexapod_body.stl  leg hip.stl  leg_middle.stl  leg_top.stl  leg_top_bracket.stl  leg_top_motor.stl
Teensy Arduino src/: Published gait Serial Packet example.txt
Teensy Arduino src/Teensy_DG1/: InverseKin.cpp  MyDynamixel.cpp  Teensy_DG1.ino
Teensy Arduino src/Teensy_DG2_HAntR_controller/: InverseKin.cpp  Teensy_DG2_HAntR_controller.ino
Teensy Arduino src/Teensy_DG3_Mujoco_HIL_integration/: HAntR_functions.cpp  HAntR_functions.h  Teensy_DG3_Mujoco_HIL_integration.ino
Teensy Arduino src/Teensy_DG3_Standing_demo_force_control/: Teensy_DG3_Standing_demo_force_control.ino
Teensy Arduino src/Teensy_DG4_Standing_demo_force_control/: HAntR_functions.cpp  MyDynamixel.cpp  Teensy_DG4_Standing_demo_force_control.ino
Teensy Arduino src/Teensy_DG5_Mujoco_HIL_refactor/: HAntR_functions.cpp  HAntR_functions.h  Kinematics.cpp  Kinematics.h  Misc_demo_functions.cpp  Misc_demo_functions.h  Mujoco_HIL_sim.cpp  Mujoco_HIL_sim.h  MyDynamixel.cpp  MyDynamixel.h  Poly6Interpolator3D.cpp  Poly6Interpolator3D.h  Teensy_DG5_Mujoco_HIL_refactor.ino
sheldon_ros2_port2/: PlannerV1.py  planner.py  ros2_serial_bridge.py  test_planner.py  test_send_cmdvel.py
src/my_hexapod_interfaces/: CMakeLists.txt  package.xml
src/my_hexapod_interfaces/msg/: ArrayMessage.msg  LegPath.msg  PathVarNCmdVel.msg  PathVariables.msg  WorldFeetPlace.msg
src/sheldon_ros2_port2/: LICENSE  package.xml  setup.py
src/sheldon_ros2_port2/sheldon_ros2_port2/: PlannerV1.py  hexapodC.py  movefunc.py  ros2_serial_bridge.py  test_planner.py
