<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sheldon_ros2_port2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="danie@todo.todo">danie</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <test_depend>geometry_msgs</test_depend> <!-- optional but good for completeness -->

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <test_depend>sensor_msgs</test_depend> <!-- optional but good for completeness -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
